# Weather-Station

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c
src/hardware/: hardware.c  hardware.h
src/helpers/: helpers.c  helpers.h  html_data.c  lwipopts.h  makefsdata.py
src/html/: debug.shtml  detailed.shtml  index.shtml
src/server/: cgi.c  cgi.h  ssi.c  ssi.h
src/wifi_config/: wifi_credentials.h.template
